# TRIN_EARL

./: .gitignore  List of ROS commands  ROS commands and proj doc  ROS commands and proj documentation  catkin_rename.package.sh  frames.gv  readme.md
arduino_code/Blink/: Blink.ino
arduino_code/Odometry_test/: Odometry_test.ino
arduino_code/ard_odometry/: ard_odometry.ino
arduino_code/autonomous_light/autonomous_light.ino/: autonomous_light.ino.ino
arduino_code/odom_test_ignore/sketch_apr30a/: sketch_apr30a.ino
arduino_code/squirrel_odomomtry/: squirrel_odomomtry.ino
ardunio_code/increase_decrease/: increase_decrease.ino
ardunio_code/sketch_apr03b/: sketch_apr03b.ino
beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  earl.rviz  model.config  package.xml  package.xml~
beginner_tutorials/calibrationdata/: ost.txt  ost.yaml
beginner_tutorials/config/: robot_control.yaml
beginner_tutorials/launch/: robot_control.launch
beginner_tutorials/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
beginner_tutorials/src/: alt_gmap.launch  blink_rate.py  c_listener  c_listener~  controller_input.cpp  controller_input~  drive_base.cpp  earl.launch  fake_scan.cpp  fake_scan.cpp~  gazebo.launch  gmap.launch  input_talker.cpp~  listener.cpp  listener.cpp~  odometry_test.cpp  odometry_test.cpp~  signal_speed.cpp
beginner_tutorials/urdf/: frames.gv  macros.xacro  robot.sdf  robot.urdf  robot.xacro
crowe_tutorials/: CMakeLists.txt  package.xml
differential-drive/nodes/: twist_to_motors.py
donotbuild/differential-drive/nodes/: .twist_to_motors.py.swp
fovis/fovis_ros/: CMakeLists.txt
fovis/fovis_ros/cmake/: libfovisConfig.cmake
fovis/fovis_ros/launch/: fovis.launch  fovis_hydro_openni.launch
gps_umd/gps_common/: CMakeLists.txt
gps_umd/gpsd_client/: CMakeLists.txt
hector_slam/: .rosinstall  hector_slam_catkin.rosinstall  setup.sh
hector_slam/devel/: .catkin  .rosinstall  setup.sh
igvc/: CMakeLists.txt  ard_odom_translator.py  earl.rviz  package.xml
igvc/config/: gps_waypoint.txt  rplidar.rviz  sick_boxes.rviz  urg.rviz
igvc/launch/: 1  earl.launch  earl_sim.launch  fkndrv.launch  gps.launch  hector_slam.launch  motor_test.launch  rplidar.launch  squirrel.launch  test_odom.launch  test_odom.launch~
igvc/maps/: maze.world
igvc/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
igvc/ros-prez/: wall_follow.py
igvc/ros-prez/wall_follow/: wall_follow.ino
igvc/src/: .fake_scan.cpp.swp  .motor_controller.cpp.swp  ard_odom_translator.py  ardunino_odom.ino  blink_rate.py  cmd_vel_test.py  diff_ty.py  earl.launch  gmap.launch  gps_goals.py  logitech_drive.py  manifest.xml  motor_commander.py  motor_commander.py~  motor_controller.cpp  motor_controller.py  motor_controller.py~  motor_controller_test.py  multiplexer.py  publish_goal_fix.py  scan_test.cpp~  xbox_drive.py
igvc/src/image_processing/: barrel_fiter.cpp  color_filter_video_test.py
igvc/src/test/: boost_version  (+3 more)
igvc/urdf/: labrob.urdf  materials.xacro  robot.gazebo
igvc/world/: test.world
igvc_sim/: CMakeLists.txt  package.xml
igvc_sim/launch/: earl_sim.launch
image_transport_package/: CMakeLists.txt  package.xml  package.xml~
image_transport_package/src/: camera_calibration.cpp  camera_calibration.cpp~  line_test.cpp~  my_subscriber.cpp  scan_test.cpp  scan_test.cpp~  sub_test.cpp  sub_test.cpp~
imu_tools/: README.md
joy_test/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
joy_test/src/: c_listener.cpp  c_listener.cpp~
jros/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.md  bridge.py  cmake_install.cmake  global_pose_pb2.py  package.xml  todo.txt
jros/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
jros/catkin_generated/installspace/: earl-msg-extras.cmake  earl-msg-paths.cmake  earl.pc  earlConfig.cmake
jros/catkin_generated/stamps/earl/: package.xml.stamp
jros/cmake/: earl-genmsg-context.py  earl-genmsg.cmake
jros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
jros/devel/lib/pkgconfig/: earl.pc
jros/devel/share/earl/cmake/: earl-msg-extras.cmake  earl-msg-paths.cmake  earlConfig.cmake
jros/gtest/: CTestTestfile.cmake  Makefile
jros/msg/: GlobalPose.msg
jros/proto/: global_pose.proto
jros/scripts/: bridge.py  subscriber.py
jros/src/: JAUSChallenge2010.cpp  bridge.cpp  bridge.py  global_pose.pb.cc  global_pose.pb.h  subscriber.cpp
man_drive/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
man_drive/src/: man_drive.cpp  man_drive.cpp~  man_drive2.cpp
navigation_goals/: CMakeLists.txt  package.xml
navigation_goals/scripts/: global_navigation_goals.py  simple_navigation_goals.py
nmea_navsat_driver/src/: nmea_topic_serial_reader~
robot_localization/launch/: ekf_template.launch  ekf_template2.launch
robot_localization/src/: navsat_transform.cpp
rosserial/rosserial_server/: CMakeLists.txt  CMakeLists.txt~
rosserial/rosserial_server/launch/: man_drive.launch  ros_odom.launch  serial.launch
rosserial/rosserial_server/src/: auto_drive.cpp  man_drive.cpp  man_drive.cpp~  man_drive.launch~  man_drive2.cpp  man_drive2.cpp~  man_drive_update.cpp  man_drive_update.cpp~  odom_backup.cpp  ros_odometry.cpp  serial_node.cpp  serial_test.cpp  serial_test.cpp~  test_drive.cpp  xbox_drive.cpp
rplidar_ros/launch/: rplidar.launch  rplidar.launch~  test_rplidar.launch
rplidar_ros/src/: node.cpp
sketchbook/man_drive/: man_drive.ino
sketchbook/sketch_apr12a/: sketch_apr12a.ino
sketchbook/sketch_feb24b/: sketch_feb24b.ino
sketchbook/sketch_may03b/: sketch_may03b.ino
sketchbook/test/: test.ino
turtlesim_cleaner/: CMakeLists.txt  package.xml
turtlesim_cleaner/src/: Moving in a Straight Line  circle.cpp  circle.py  move.py  move1.py  publish.py  robot_cleaner.cpp  translate.py
urg_node/launch/: urg.launch
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
(+62 files in other folders)
